--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,14 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true
+            },
+            "fr":{
+              "aot": true,
+              "outputPath": "dist/angular-course-fr/",
+              "i18nFile": "src/locale/messages.fr.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "fr",
+              "i18nMissingTranslation": "ignore"
             }
           }
         },
@@ -74,6 +82,9 @@
           "configurations": {
             "production": {
               "buildTarget": "angular-course:build:production"
+            },
+            "fr": {
+              "browserTarget": "angular-course:build:production"
             }
           }
         },
